--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,9 @@ body {
 	min-width: 320px;
 	min-height: 100vh;
 }
+#root {
+	margin: 0 auto;
+	padding: 2rem;
+	text-align: center;
+	max-width: 1280px;
+}
